# feedback-bot

./: .gitignore  Procfile  README.md  README.ru.md  alembic.ini  app.json  pyproject.toml  requirements.txt  settings.toml
alembic/: env.py
alembic/versions/: 20210827003519-6ba2ed7df90f-create_target_chat_and_admin_tables.py  20210827003519-6ba2ed7df90f-initial_schema.py  20211109013019-12d601a0379f-add_forwarded_message_created_at_column.py
feedback_bot/: __main__.py  bootstrap.py  bot.py  config.py  database.py  handlers.py  main.py  model.py  services.py
feedback_bot/adapters/: telegram.py
feedback_bot/adapters/repositories/: admin.py  forwarded_message.py  group.py  target_chat.py
feedback_bot/domain/: aggregates.py  commands.py  events.py  model.py
feedback_bot/model/: admin.py  group.py
feedback_bot/repositories/: admin.py  group.py
feedback_bot/service/: command_handlers.py  unit_of_work.py
feedback_bot/service_layer/: services.py  unit_of_work.py
tests/: conftest.py
tests/integration/: conftest.py  test_repositories.py
tests/unit/: test_model.py  test_services.py
