[tool.poetry]
name = "feedback-bot"
version = "0.1.0"
description = ""
authors = ["polfpilf <polfpilf@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "~2.14.3"
aiohttp = {extras = ["speedups"], version = "~3.7.4"}
ujson = "~4.0.2"
dynaconf = "~3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
