[tool.poetry]
name = "feedback-bot"
version = "0.1.0"
description = ""
authors = ["polfpilf <polfpilf@protonmail.com>"]
packages = [
  { include = "feedback_bot" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "~2.14.3"
aiohttp = {extras = ["speedups"], version = "~3.7.4"}
ujson = "~4.0.2"
dynaconf = "~3.1.4"
dependency-injector = "~4.35.2"
alembic = "~1.6.5"
psycopg2 = "~2.9.1"
asyncpg = "~0.24.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2.4"
pytest-cov = "~2.12.1"
pytest-asyncio = "~0.15.1"

[tool.pytest.ini_options]
addopts = "--cov=feedback_bot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
